<resources>

    <string name="app_name">COVID Heroes</string>
<string name="img_hero">Hero Information</string>
    <string name="img_covid">COVID Statistics</string>
    <string name="no_wifi">Please connect to the Internet</string>


<!-- FAB Strings-->
    <string name="fab_chart">COVID Statistics</string>
    <string name="fab_search">Search Heroes</string>
    <string name="fab_add">Add New Hero</string>
    <string name="fab_hide">Hide</string>
    <string name="fab_hero">Hero Information</string>
    <string name="fab_linechart">COVID Cases Graph</string>

    <!--Button Strings-->
    <string name="btn_continue">Continue</string>
    <string name="btn_back">Back</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_save">Save</string>
    <string name ="btn_add">Add</string>
    <string name= "btn_edit">Edit</string>

    <!-- Toast Strings-->
    <string name="error_delete">Error Deleting Hero</string>
    <string name="error_add">Error Adding Hero</string>
    <string name="error_update">Error Updating Hero</string>

    <string name="conn_search">Error with Connecting to Dataset</string>
    <string name="delete_hero">Hero Successfully Removed</string>
    <string name="add_hero">Hero Successfully Added</string>
    <string name="updated_hero">Hero Successfully Updated</string>
<!-- Dialog Fragments-->
    <string name ="dialog_tag">DialogFragment</string>
    <string name="dialog_create"> Create Dialog</string>
    <string name="dialog_edit"> Edit Dialog</string>
    <string name="dialog_delete"> Delete Dialog</string>
    <string name ="title">Title</string>
    <string name="delete_message">Are you sure you want to delete {0} ? </string>
    <!-- Edit Text Strings-->
    <string name="et_heroname"> Enter Hero Name</string>
    <string name="et_realname"> Enter Real Name</string>
    <string name="et_team"> Enter Affiliated Team</string>

<!-- Text View Strings-->
    <string name="tv_heroname"><b>Hero Name: </b></string>
    <string name="tv_realname"><b>Real Name: </b></string>
    <string name="tv_team"><b>Affiliated Team: </b></string>
    <string name="tv_rating"><b>Rating:</b> </string>

    <!-- Covid Cases-->
    <string name="sp_Province">Province</string>
    <string name="tv_deaths">Deaths</string>
    <string name ="tv_result">Current COVID Cases for: </string>
    <string name="tv_active">Active Cases</string>
    <string name="tv_recovered">Recovered</string>
    <string name="tv_confirmed">Confirmed Cases</string>
    <string name="covid_title_menu"> CASES OF COVID-19</string>
    <string name="all_covid_title_menu"> COVID-19 CASES </string>
    <string name="long_date_pattern">dd MMM yyyy</string>
    <string name="short_date_pattern">DD</string>


    <string name="covid_chart">CHART</string>
    <string name="covid_province">PROVINCE</string>
    <string name="chart_active">Active</string>
    <string name="chart_confirmed">Confirmed</string>
    <string name="chart_recovered">Recovered</string>
    <string name="chart_deaths">Deaths</string>
    <string name="chart_all">All</string>

    <string-array name="days">
        <item>5 days</item>
        <item>10 days</item>
    </string-array>

    <string-array name="superhero">
        <item>batman</item>
        <item>deadpool</item>
        <item>iron man</item>
        <item>captain america</item>
        <item>spiderman</item>
        <item>superman</item>
    </string-array>
<string-array name="european_countries">
    <item>Albania</item>
    <item>Andorra</item>
    <item>Armenia</item>
    <item>Austria</item>
    <item>Azerbaijan</item>
    <item>Belarus</item>
    <item>Belgium</item>
    <item>Bulgaria</item>
    <item>Croatia</item>
    <item>Cyprus</item>
    <item>Czechia</item>
    <item>Denmark</item>
    <item>Estonia</item>
    <item>Finland</item>
    <item>France</item>
    <item>Georgia</item>
    <item>Germany</item>
    <item>Greece</item>
    <item>Hungary</item>
    <item>Iceland</item>
    <item>Ireland</item>
    <item>Italy</item>
    <item>Kazakhstan</item>
    <item>Kosovo</item>
    <item>Latvia</item>
    <item>Liechtenstein</item>
    <item>Lithuania</item>
    <item>Luxembourg</item>
    <item>Malta</item>
    <item>Moldova</item>
    <item>Monaco</item>
    <item>Montenegro</item>
    <item>Netherlands</item>
     <item>Norway</item>
    <item>Poland</item>
    <item>Portugal</item>
    <item>Romania</item>
    <item>Russia</item>
    <item>Serbia</item>
    <item>Slovakia</item>
    <item>Slovenia</item>
    <item>Spain</item>
    <item>Sweden</item>
    <item>Switzerland</item>
<item>Turkey</item>
<item>Ukraine</item>
<item>United Kingdom</item>

</string-array>
</resources>