<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_covid"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

<LinearLayout
 android:layout_marginTop="150sp"
    android:layout_width="match_parent"
    android:orientation="vertical"

    android:layout_height="wrap_content">

<Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:spinnerMode="dialog"
    android:layout_marginTop="15sp"
    android:background="@drawable/bg_spinner"
    android:padding="20sp"
    android:dropDownSelector="@color/spinner"
    android:id="@+id/spCountry"/>


    <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_spinner"
    android:padding="20sp"
    android:textAlignment="center"
    android:dropDownSelector="@color/spinner"
    android:visibility="gone"
    android:layout_marginTop="15sp"
    android:prompt="@string/sp_Province"
    android:id="@+id/spProvince"/>

      <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:id="@+id/lottie_loading"
          android:visibility="gone"
        app:lottie_rawRes="@raw/loading"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
       />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        tools:context=".covid.CovidActivity">
        <LinearLayout

            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2sp"
        android:background="@drawable/bg_covid_card"
        android:layout_marginTop="10sp"
        android:id="@+id/cvActive"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="5sp"
                android:text="@string/tv_active"
                android:id="@+id/tvActiveCases"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_gravity="start"
                android:contentDescription="@string/tv_active"
                android:src="@drawable/ic_virus"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="10sp"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:id="@+id/tvNoActiveCases"
                tools:ignore="RelativeOverlap" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right"
                android:background="@android:color/white"
                android:contentDescription="@string/tv_confirmed" />

        </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:background="@drawable/bg_covid_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_marginTop="10sp"
        android:id="@+id/cvConfirmed"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="5sp"
                android:text="@string/tv_confirmed"
                android:id="@+id/tvDConfirmedCases"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/tv_confirmed"
                android:src="@drawable/ic_confirmed"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:layout_centerInParent="true"
                android:padding="20sp"
                android:id="@+id/tvNoConfirmedCases"
                tools:ignore="RelativeOverlap" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right"
                android:background="@android:color/white"
                android:contentDescription="@string/tv_confirmed" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:background="@drawable/bg_covid_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2sp"
        android:padding="10sp"
        android:layout_marginTop="25sp"
        android:id="@+id/cvRecovered">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="5sp"
                android:text="@string/tv_recovered"
                android:id="@+id/tvRecoveredCases"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseCompoundDrawables"
 >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/tv_recovered"
        android:src="@drawable/ic_recovered"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
              android:layout_centerInParent="true"
                android:padding="20sp"
                android:textSize="18sp"
                android:id="@+id/tvNoRecoveredCases"
                tools:ignore="RelativeOverlap" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20sp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_right"
        android:background="@android:color/white"
        android:contentDescription="@string/tv_confirmed" />
</RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:background="@drawable/bg_covid_card"
        android:elevation="2sp"
        android:layout_marginTop="25sp"
        android:id="@+id/cvDeaths">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="5sp"
                android:text="@string/tv_deaths"
                android:id="@+id/tvDeathCases"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/tv_deaths"
                android:src="@drawable/ic_deaths"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="20sp"
                android:textSize="18sp"
                android:layout_centerInParent="true"
                android:id="@+id/tvNoDeathCases"
                tools:ignore="RelativeOverlap" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20sp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right"
                android:background="@android:color/white"
                android:contentDescription="@string/tv_confirmed" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
     <!-- Code below is based on Web Article: Medium: "How to add Extended Floating Action Button in Android | Android Studio | Java"
    Golap Gunjan Barman,
    Medium 2014
    https://medium.com/nerd-for-tech/how-to-add-extended-floating-action-button-in-android-android-studio-java-481cc9b3cdcb -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="24dp"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_plus"
        app:iconTint="@color/white"
        android:text="@string/fab_hide"
        android:textColor="@color/white"
        app:fabSize="normal"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended"

        android:contentDescription="@string/fab_add" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="2sp"
    android:id="@+id/fab_layout"
    app:layout_constraintBottom_toTopOf="@+id/fabAdd"
    app:layout_constraintEnd_toEndOf="@+id/fabAdd"
    app:layout_constraintStart_toStartOf="@+id/fabAdd">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabHero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:padding="2sp"
        app:backgroundTint="@color/fab_hero"
        android:contentDescription="@string/fab_hero"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended"
        android:text="@string/fab_hero"
        android:textColor="@color/white"

        app:icon="@drawable/ic_superhero"
        app:iconTint="@color/white"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAllChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:padding="5sp"
        android:text="@string/fab_linechart"
        app:backgroundTint="@color/fab_line_chart"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlayExtended"
        android:textColor="@color/white"
        app:icon="@drawable/ic_line_chart"
        app:iconTint="@color/white"/>









</LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>